gccida/c3/invalidate_any_buried_refs
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate_any_buried_refs/src/gcse.c:6573:12: error: expected expression
*( _OWORD *)&v2->loads = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate_any_buried_refs/src/gcse.c:6573:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2->loads = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate_any_buried_refs/src/obj/gcse.o] Error 1
